--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 @import url("reset.css");
 :focus {
     border: 0;
-    outline: 0
+    outline: 0;
 }
 
 img {
@@ -21,7 +21,7 @@ figure {
 }
 
 a:hover {
-    text-decoration: none
+    text-decoration: none;
 }
 
 a {
@@ -35,11 +35,11 @@ a {
 .clears:after {
     clear: both;
     display: block;
-    content: '';
+    content: "";
 }
 
 body {
-    font-family: 'Candara';
+    font-family: "Candara";
 }
 
 
@@ -56,99 +56,99 @@ body {
 } */
 
 @font-face {
-    font-family: 'Arista Pro extralight';
-    src: url('../fonts/AristaProTrial-ExtraLight.eot');
-    src: url('../fonts/AristaProTrial-ExtraLight.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-ExtraLight.woff2') format('woff2'), url('../fonts/AristaProTrial-ExtraLight.woff') format('woff'), url('../fonts/AristaProTrial-ExtraLight.ttf') format('truetype');
+    font-family: "Arista Pro extralight";
+    src: url("../fonts/AristaProTrial-ExtraLight.eot");
+    src: url("../fonts/AristaProTrial-ExtraLight.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-ExtraLight.woff2") format("woff2"), url("../fonts/AristaProTrial-ExtraLight.woff") format("woff"), url("../fonts/AristaProTrial-ExtraLight.ttf") format("truetype");
     font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro extrabold';
-    src: url('../fonts/AristaProTrial-Fat.eot');
-    src: url('../fonts/AristaProTrial-Fat.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-Fat.woff2') format('woff2'), url('../fonts/AristaProTrial-Fat.woff') format('woff'), url('../fonts/AristaProTrial-Fat.ttf') format('truetype');
+    font-family: "Arista Pro extrabold";
+    src: url("../fonts/AristaProTrial-Fat.eot");
+    src: url("../fonts/AristaProTrial-Fat.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-Fat.woff2") format("woff2"), url("../fonts/AristaProTrial-Fat.woff") format("woff"), url("../fonts/AristaProTrial-Fat.ttf") format("truetype");
     font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro Hairline';
-    src: url('../fonts/AristaProTrial-Hairline.eot');
-    src: url('../fonts/AristaProTrial-Hairline.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-Hairline.woff2') format('woff2'), url('../fonts/AristaProTrial-Hairline.woff') format('woff'), url('../fonts/AristaProTrial-Hairline.ttf') format('truetype');
+    font-family: "Arista Pro Hairline";
+    src: url("../fonts/AristaProTrial-Hairline.eot");
+    src: url("../fonts/AristaProTrial-Hairline.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-Hairline.woff2") format("woff2"), url("../fonts/AristaProTrial-Hairline.woff") format("woff"), url("../fonts/AristaProTrial-Hairline.ttf") format("truetype");
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro Light';
-    src: url('../fonts/AristaProTrial-Light.eot');
-    src: url('../fonts/AristaProTrial-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-Light.woff2') format('woff2'), url('../fonts/AristaProTrial-Light.woff') format('woff'), url('../fonts/AristaProTrial-Light.ttf') format('truetype');
+    font-family: "Arista Pro Light";
+    src: url("../fonts/AristaProTrial-Light.eot");
+    src: url("../fonts/AristaProTrial-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-Light.woff2") format("woff2"), url("../fonts/AristaProTrial-Light.woff") format("woff"), url("../fonts/AristaProTrial-Light.ttf") format("truetype");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro Regular';
-    src: url('../fonts/AristaProTrial-Regular.eot');
-    src: url('../fonts/AristaProTrial-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-Regular.woff2') format('woff2'), url('../fonts/AristaProTrial-Regular.woff') format('woff'), url('../fonts/AristaProTrial-Regular.ttf') format('truetype');
+    font-family: "Arista Pro Regular";
+    src: url("../fonts/AristaProTrial-Regular.eot");
+    src: url("../fonts/AristaProTrial-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-Regular.woff2") format("woff2"), url("../fonts/AristaProTrial-Regular.woff") format("woff"), url("../fonts/AristaProTrial-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro bold';
-    src: url('../fonts/AristaPro-Bold.eot');
-    src: url('../fonts/AristaPro-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaPro-Bold.woff2') format('woff2'), url('../fonts/AristaPro-Bold.woff') format('woff'), url('../fonts/AristaPro-Bold.ttf') format('truetype');
+    font-family: "Arista Pro bold";
+    src: url("../fonts/AristaPro-Bold.eot");
+    src: url("../fonts/AristaPro-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaPro-Bold.woff2") format("woff2"), url("../fonts/AristaPro-Bold.woff") format("woff"), url("../fonts/AristaPro-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro semibold';
-    src: url('../fonts/AristaProTrial-SemiBold.eot');
-    src: url('../fonts/AristaProTrial-SemiBold.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-SemiBold.woff2') format('woff2'), url('../fonts/AristaProTrial-SemiBold.woff') format('woff'), url('../fonts/AristaProTrial-SemiBold.ttf') format('truetype');
+    font-family: "Arista Pro semibold";
+    src: url("../fonts/AristaProTrial-SemiBold.eot");
+    src: url("../fonts/AristaProTrial-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-SemiBold.woff2") format("woff2"), url("../fonts/AristaProTrial-SemiBold.woff") format("woff"), url("../fonts/AristaProTrial-SemiBold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Arista Pro thin';
-    src: url('../fonts/AristaProTrial-Thin.eot');
-    src: url('../fonts/AristaProTrial-Thin.eot?#iefix') format('embedded-opentype'), url('../fonts/AristaProTrial-Thin.woff2') format('woff2'), url('../fonts/AristaProTrial-Thin.woff') format('woff'), url('../fonts/AristaProTrial-Thin.ttf') format('truetype');
+    font-family: "Arista Pro thin";
+    src: url("../fonts/AristaProTrial-Thin.eot");
+    src: url("../fonts/AristaProTrial-Thin.eot?#iefix") format("embedded-opentype"), url("../fonts/AristaProTrial-Thin.woff2") format("woff2"), url("../fonts/AristaProTrial-Thin.woff") format("woff"), url("../fonts/AristaProTrial-Thin.ttf") format("truetype");
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Candara Regular';
-    src: url('../fonts/Candara.eot');
-    src: url('../fonts/Candara.eot?#iefix') format('embedded-opentype'), url('../fonts/Candara.woff2') format('woff2'), url('../fonts/Candara.woff') format('woff'), url('../fonts/Candara.ttf') format('truetype');
+    font-family: "Candara Regular";
+    src: url("../fonts/Candara.eot");
+    src: url("../fonts/Candara.eot?#iefix") format("embedded-opentype"), url("../fonts/Candara.woff2") format("woff2"), url("../fonts/Candara.woff") format("woff"), url("../fonts/Candara.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Candara bold';
-    src: url('../fonts/Candara-Bold.eot');
-    src: url('../fonts/Candara-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Candara-Bold.woff2') format('woff2'), url('../fonts/Candara-Bold.woff') format('woff'), url('../fonts/Candara-Bold.ttf') format('truetype');
+    font-family: "Candara bold";
+    src: url("../fonts/Candara-Bold.eot");
+    src: url("../fonts/Candara-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Candara-Bold.woff2") format("woff2"), url("../fonts/Candara-Bold.woff") format("woff"), url("../fonts/Candara-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Candara light';
-    src: url('../fonts/Candara-Light.eot');
-    src: url('../fonts/Candara-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/Candara-Light.woff2') format('woff2'), url('../fonts/Candara-Light.woff') format('woff'), url('../fonts/Candara-Light.ttf') format('truetype');
+    font-family: "Candara light";
+    src: url("../fonts/Candara-Light.eot");
+    src: url("../fonts/Candara-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Candara-Light.woff2") format("woff2"), url("../fonts/Candara-Light.woff") format("woff"), url("../fonts/Candara-Light.ttf") format("truetype");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -197,7 +197,7 @@ body {
 .tlinfotop44 span:last-child:after {
     position: absolute;
     top: 0;
-    content: '.';
+    content: ".";
     font-size: 25px;
     color: #e85625;
     line-height: 2px;
@@ -243,7 +243,7 @@ p {
     font-size: 18px;
     color: #1d0553;
     line-height: 24px;
-    font-family: 'Candara Regular';
+    font-family: "Candara Regular";
 }
 
 .topleftinfo45 p {
@@ -295,7 +295,7 @@ p {
 }
 
 .aboutme56 h2 {
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     font-size: 60px;
     color: #e85625;
     margin-bottom: 20px;
@@ -344,7 +344,7 @@ p {
     font-size: 80px;
     color: #e85625;
     line-height: normal;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
 }
 
 .bannertopinfo55 {
@@ -352,7 +352,7 @@ p {
 }
 
 .bnrttopbanner56 h2 {
-    font-family: 'Candara Regular';
+    font-family: "Candara Regular";
     font-size: 50px;
     color: #fff;
     text-transform: uppercase;
@@ -373,13 +373,13 @@ p {
     align-items: center;
     font-size: 24px;
     color: #fff;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
 }
 
 .youcan {
     font-size: 36px;
     color: #e95525;
-    font-family: 'Candara bold';
+    font-family: "Candara bold";
     margin-bottom: 20px;
 }
 
@@ -388,7 +388,7 @@ p {
 }
 
 .topbtminfo45 p {
-    font-family: 'Candara Regular';
+    font-family: "Candara Regular";
     font-size: 24px;
     color: #e85625;
     margin-bottom: 15px;
@@ -421,14 +421,14 @@ p {
 }
 
 .fndulist456 li:last-child {
-    border: 0
+    border: 0;
 }
 
 
 /* list section */
 
 .togethersec15 span {
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     width: calc(100% - 200px);
     display: inline-block;
     font-size: 60px;
@@ -477,7 +477,7 @@ p {
 }
 
 .servtop55 h3 {
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     width: 42%;
     display: inline-flex;
     font-size: 60px;
@@ -521,7 +521,7 @@ p {
 }
 
 .servlist58 li:last-child {
-    border: 0
+    border: 0;
 }
 
 
@@ -535,7 +535,7 @@ p {
 .featuresec56 h2 {
     font-size: 48px;
     color: #e95525;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     margin-bottom: 25px;
     text-transform: uppercase;
 }
@@ -543,7 +543,7 @@ p {
 .featuresec56 span {
     font-size: 36px;
     color: #e95525;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     display: block;
     padding: 5px 0;
 }
@@ -563,7 +563,7 @@ p {
 }
 
 .featuresec56 .readmr568 {
-    color: #1a0552
+    color: #1a0552;
 }
 
 
@@ -577,7 +577,7 @@ p {
 .testimonial58 h2 {
     font-size: 28px;
     color: #fff;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     display: flex;
     align-items: center;
     margin-bottom: 30px;
@@ -597,7 +597,7 @@ p {
 .testmoinfo55 h3 {
     font-size: 30px;
     margin-bottom: 0;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     color: #1a0552;
     text-transform: uppercase;
 }
@@ -634,7 +634,7 @@ p {
 .logofooter a {
     display: inline-block;
     font-size: 60px;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     color: #e85625;
 }
 
@@ -658,7 +658,7 @@ p {
     font-size: 24px;
     color: #e95525;
     margin-bottom: 20px;
-    font-family: 'Arista Pro bold';
+    font-family: "Arista Pro bold";
     text-transform: uppercase;
 }
 
@@ -817,11 +817,11 @@ p {
     display: block;
     color: #000;
     font-size: 18px;
-    font-family: 'Candara Regular';
+    font-family: "Candara Regular";
 }
 
 .modal-title {
-    font-family: 'Arista Pro Regular';
+    font-family: "Arista Pro Regular";
     font-size: 22px;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -830,18 +830,18 @@ p {
 
 /* left menu ends */
 
-@media only screen and (max-width:767px) {
+@media only screen and (max-width: 767px) {
     .bnrttopbanner56 {
         margin: 0;
         margin-bottom: 20px;
     }
     .togethersec15 span {
-        font-family: 'Arista Pro bold';
+        font-family: "Arista Pro bold";
         width: calc(100% - 90px);
         font-size: 36px;
     }
     .servtop55 h3 {
-        font-family: 'Arista Pro bold';
+        font-family: "Arista Pro bold";
         width: 100%;
         display: flex;
         font-size: 60px;
@@ -898,5 +898,115 @@ p {
     }
     .aboutme56 h2 {
         font-size: 40px;
+    }
+    /* ------------------------------------------------------  Post gallary --------------------------------------------------- */
+    .gitem2 {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+        grid-gap: 1px;
+    }
+    .gitem2 a {
+        grid-column-start: 1;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem2 a:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 7;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem3 {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+        grid-gap: 1px;
+    }
+    .gitem3 a {
+        grid-column-start: 1;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem3 a:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem3 a:nth-child(3) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem4 {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+        grid-gap: 1px;
+    }
+    .gitem4 a {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem4 a:nth-child(2) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem4 a:nth-child(3) {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem4 a:nth-child(4) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem5 {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+        grid-gap: 1px;
+    }
+    .gitem5 a {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem5 a:nth-child(2) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .gitem5 a:nth-child(3) {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem5 a:nth-child(4) {
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 4;
+        grid-row-end: 7;
+    }
+    .gitem5 a:nth-child(5) {
+        grid-column-start: 5;
+        grid-column-end: 7;
+        grid-row-start: 4;
+        grid-row-end: 7;
+        position: relative;
     }
 }
